--- a/frontend/src/components/Auth/Login.css
+++ b/frontend/src/components/Auth/Login.css
@@ -1,8 +1,6 @@
 /* small screens */
 
 .login-page-container {
-    /* margin-top: 1rem; */
-    padding-inline: 0;
     text-align: center;
 }
 
@@ -185,18 +183,11 @@
   }
 }
 
-@media (min-width: 768px) {
-    .login-container {
-        max-width: 75%;
-        margin: 0 auto 1.3rem auto;     
-    }
-}
 
 /* Large screens */
 @media (min-width: 992px) {
-
-    .login-container {
-        max-width: 60%;
-        margin: 0 auto 1.3rem auto;
+    .login-page-container {
+        max-width: 70%;
+        margin: 0 auto;
     }
 }
